<resources>
    <string name="app_name">Eclass</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings used for contents -->
    <string name="menu_homework">Homework</string>
    <string name="menu_recording">Recording</string>
    <string name="menu_question">Question</string>
    <string name="menu_ques_search">Search</string>
    <string name="menu_ques_add">Add</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log out</string>

    <!-- Strings used for register and sign in -->
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="send_code">Send Code</string>
    <string name="code">Code</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="login_verification_code">Verification Code</string>
    <string name="login_send_verif">Send Verfication Code</string>
    <string name="login_eclass">ECLASS</string>
    <string name="login_book">book</string>
    <string name="user_info_fill_info">Please fill in your personal information</string>

    <!-- Strings used for homework fragment -->
    <string name="homework">Homework</string>
    <string name="homework_save">Save</string>
    <string name="homework_close">Close</string>

    <!-- Strings used for recording fragment -->
    <string name="rec_search">Search</string>
    <string name="rec_video_title">Video Title</string>
    <string name="rec_choose_video">Choose video</string>
    <string name="rec_upload">Upload</string>

    <!-- Strings used for question fragment -->
    <string name="menu_rec_search">Search</string>
    <string name="ques_answered">Answered</string>
    <string name="ques_answers">Answers</string>
    <string name="ques_answer_box">Please type your answer here</string>
    <string name="ques_post">Post</string>
    <string name="new_ques_anon">Show my name as anonymous</string>
    <string name="new_ques_summary">Summary</string>
    <string name="new_ques_details">Details</string>
    <string name="new_ques_post">Post my question</string>
    <string name="new_ques_entersummary">Please type the summary for your question here</string>
    <string name="new_ques_type_descrip">Please type the description for your question here</string>
    <string name="user_info_instructor">I am an instructor</string>

    <!-- Strings used for profile page -->
    <string name="pf_upload">Upload image</string>
    <string name="pf_name">name</string>
    <string name="pf_save_name">Save my name</string>
    <string name="pf_save_image">Save my profile picture</string>
    <string name="pf_profile_image">profile</string>
    <string name="ques_no_answer_posted">No answer is posted for this question</string>
    <string name="ques_posted_by">\"Posted by \"</string>
    <string name="ques_go_back">Go Back</string>
    <string name="menu_rec_add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ques_answer_anon">Post my answer anonymously</string>
    <string name="menu_profile">Profile</string>

    <!-- Strings used for menu -->

</resources>