<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fragment_background"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/pfImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="163dp"
        android:contentDescription="@string/pf_profile_image" />

    <Button
        android:id="@+id/pfUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ques_button"
        android:text="@string/pf_upload"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pfImage"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="248dp" />

    <EditText
        android:id="@+id/pfName"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:hint="@string/pf_name"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pfUpload"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="279dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/pfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pf_save_name"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ques_button"
        app:layout_constraintTop_toBottomOf="@id/pfUpload"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="276dp" />

    <ProgressBar
        android:id="@+id/pfProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="49dp"
        android:layout_height="44dp"
        android:layout_marginBottom="90dp"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="479dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>