<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background"
    android:orientation="vertical"
    android:id="@+id/question"
    tools:context=".question.QuestionFragment">


    <TextView
        android:id="@+id/quesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/itim"
        android:gravity="start"
        android:background="@drawable/ques_title_background"
        android:padding="5dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/primaryTextColor"
        android:layout_gravity="end"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/quesDescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:scrollbars="vertical"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ques_answers"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/itim"
        android:textSize="20sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:gravity="start"
        android:background="@drawable/ques_answers_background"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/quesAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/quesNewAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:ems="10"
        android:scrollbars="vertical"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/ques_answer_box"
        android:textSize="15sp"
        android:textColor="@color/primaryTextColor"
        android:background="@drawable/ques_answerbox_background"
        android:autofillHints="" />

    <Button
        android:id="@+id/quesPost"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:background="@drawable/ques_button"
        android:textSize="15sp"
        android:text="@string/ques_post" />
</LinearLayout>